# appleseed-autoessay

./: .ci-attestation.json  .env.example  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.ja.md  README.md  README.zh.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  mypy.ini
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_runs_sse_state.py  003_oidc_auth.py  004_corpus_library.py  005_novelty_discussions.py  006_proposal_stage.py  007_project_language.py  008_soft_delete.py  009_authors.py  010_phase_rerun.py  011_phase_version.py  012_phase_prompt_override.py  013_phase_branches.py  014_phase_lock.py  015_phase_version_source.py  016_project_corpus.py  017_backfill_pv_first_runs.py  018_research_kernel.py  019_research_role.py  020_native_password_auth.py  021_run_soft_delete.py  022_run_mathematical_mode.py  023_run_auto_advance.py  024_run_generation_mode.py  025_run_telemetry.py
backend/baselines/: README.md
backend/scripts/: ci-local.sh  diff_baselines.py  evaluate_paper.py  run_baseline_suite.py
backend/src/autoessay/: __init__.py  authors.py  auto_advance.py  branches.py  config.py  corpus.py  db.py  dedup.py  domain_loader.py  evidence_ledger.py  export_filename.py  express_runner.py  framework_lens.py  generation_modes.py  kernel_suggest.py  llm_client.py  main.py  models.py  orchestrator.py  paper_modes.py  phase_diff.py  phase_force_approve.py  phase_history.py  phase_lock.py  phase_readiness.py  (+11 more)
backend/tests/: conftest.py  test_authors.py  test_citations.py  test_corpus_api.py  test_corpus_privacy.py  test_corpus_style_profile.py  test_dedup.py  test_delete_pv_endpoint.py  test_diversity_rerank.py  test_docx_text.py  test_domain_loader.py  test_domains_api.py  test_domains_multi.py  test_essay_limit.py  test_evidence_ledger.py  test_express_runner.py  test_framework_lens.py  test_framework_lens_runner_llm.py  test_framework_lens_schema.py  test_framework_lens_stub_setting.py  test_generation_mode_api.py  test_health.py  test_kernel_suggest_api.py  test_language_directive.py  test_list_endpoints.py  test_llm_client.py  test_migration_017_backfill.py  test_migration_024_generation_mode.py  test_migration_025_run_telemetry.py  test_mode_telemetry.py  test_mode_telemetry_report.py  test_novelty_discussion.py  test_novelty_discussion_privacy.py  test_paper_modes.py  test_pdf_fetcher.py  test_pdf_text.py  test_phase_branches.py  test_phase_diff.py  test_phase_force_approve.py  test_phase_history_endpoint.py  (+51 more)
(+418 files in other folders)
